[tool.poetry]
name = "poe-ritual-parser"
version = "0.1.0"
description = "Parse Ritual logs"
authors = ["staticf0x <staticf0x@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "poe_ritual_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
tox-poetry = "^0.5.0"
devtools = {extras = ["pygments"], version = "^0.12.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = [
    "D",
    "E",
    "F",
    "ANN",
]
ignore = [
    "ANN101",
]
